WEB: add bigger header, resolver overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,15 @@
 
 html,
 body {
-    height: 100%;
+  height: 100%;
+}
+
+html {
+  overflow: auto;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 @import "./navbar.scss";
